Clearfix body fields - fix potential layout issue when children contain floated elements

--- a/css/loyalist_responsive_theme.css
+++ b/css/loyalist_responsive_theme.css
@@ -16,7 +16,8 @@ figure[style*="right"] {
   clear: both;
   display: block!important;
 }
-.clear:after {
+.clear:after,
+.field-name-body:after {
   content: ".";
   visibility: hidden;
   display: block;
